--- a/.github/workflows/generate_schema_models.yml
+++ b/.github/workflows/generate_schema_models.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Generate project owl ttl file with LinkML
         run: |
           docker run --rm -v $(pwd):/workdir -u $(id -u):$(id -g) evoratools/schemasheets:0.3.1 \
-          linkml generate owl -o models/owl/evora_ontology.owl.ttl models/evora_schema.yaml
+          linkml generate owl models/evora_schema.yaml > models/owl/evora_ontology.owl.ttl
           
       - uses: actions/upload-artifact@v4
         with:
@@ -61,7 +61,7 @@ jobs:
         run: |
           rm -rf models/docs/*
           docker run --rm -v $(pwd):/workdir -u $(id -u):$(id -g) evoratools/schemasheets:0.3.1 \
-          linkml generate doc -d models/docs models/evora_schema.yaml > models/owl/evora_ontology.owl.ttl
+          linkml generate doc -d models/docs models/evora_schema.yaml
           
           
       - uses: actions/upload-artifact@v4
