--- a/.github/workflows/generate_schema_models.yml
+++ b/.github/workflows/generate_schema_models.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Generate project owl ttl file with LinkML
         run: |
           docker run --rm -v $(pwd):/workdir -u $(id -u):$(id -g) $DOCKER_IMAGE \
-          linkml generate owl models/evora_schema.yaml > models/owl/evora_ontology.owl.ttl
+          linkml generate owl --no-use-native-uris models/evora_schema.yaml > models/owl/evora_ontology.owl.ttl
 
       - uses: actions/upload-artifact@v4
         with:
